--- a/src/components/event-list/event-list.component.scss
+++ b/src/components/event-list/event-list.component.scss
@@ -41,6 +41,6 @@
 
 .vs {
     width: 75px;
-    line-height: 5.4;
+    line-height: 5.6;
     padding: 5px;
 }
